added audio release feature