@@ -19,6 +19,9 @@ import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -46,29 +49,41 @@ public class TelegramClient implements AutoCloseable {
     }
 
     @SneakyThrows
-    public Response sendFileWithMessage(@NonNull String chatId, @NonNull String messageText,
-                                        @NonNull String contentType, String fileName, byte[] data) {
+    public Response sendAudioFilesWithMessage(@NonNull String chatId, @NonNull String messageText,
+                                              @NonNull String contentType, @NonNull String performer,
+                                              @NonNull List<AudioRecord> audioRecords, byte[] thumbnail) {
+        return AudioSender.create(b -> b
+                    .chatId(chatId)
+                    .messageText(messageText)
+                    .contentType(contentType)
+                    .performer(performer)
+                    .audioRecords(audioRecords)
+                    .thumbnail(thumbnail)
+                    .objectMapper(objectMapper)
+                    .bot(bot)
+                )
+                .validate()
+                .splitToChunks()
+                .processChunks()
+                .result();
+    }
+
+    @SneakyThrows
+    public Response sendAudioFileWithMessage(@NonNull String chatId, @NonNull String messageText,
+                                             @NonNull String contentType, @NonNull String performer,
+                                             int duration, String fileName, byte[] data, byte[] thumbnail) {
         if (data.length <= 0) {
             throw new IllegalArgumentException("File doesn't exists");
         }
 
-
-        AbstractMultipartRequest<?> request;
-        if(MPEG_CONTENT_TYPE.equals(contentType)) {
-            request = new SendAudio(chatId, data)
+        SendAudio request = new SendAudio(chatId, data)
                     .fileName(fileName)
                     .contentType(contentType)
                     .caption(messageText)
                     .parseMode(ParseMode.HTML)
-                    .allowSendingWithoutReply(false);
-        } else {
-            request = new SendDocument(chatId, data)
-                    .fileName(fileName)
-                    .contentType(contentType)
-                    .caption(messageText)
-                    .parseMode(ParseMode.HTML)
-                    .allowSendingWithoutReply(false);
-        }
+                    .performer(performer)
+                    .duration(duration)
+                    .thumbnail(thumbnail);
 
         var response = bot.execute(request);
 
@@ -84,7 +99,34 @@ public class TelegramClient implements AutoCloseable {
     }
 
     @SneakyThrows
-    public Integer sendFilesWithMessage(@NonNull String chatId, @NonNull String messageText, @NonNull String contentType, @NonNull File... documents) {
+    public Response sendFileWithMessage(@NonNull String chatId, @NonNull String messageText,
+                                        @NonNull String contentType, String fileName, byte[] data) {
+        if (data.length <= 0) {
+            throw new IllegalArgumentException("File doesn't exists");
+        }
+
+        SendDocument request = new SendDocument(chatId, data)
+                    .fileName(fileName)
+                    .contentType(contentType)
+                    .caption(messageText)
+                    .parseMode(ParseMode.HTML);
+
+        var response = bot.execute(request);
+
+        if (!response.isOk()) {
+            log.error("Found mistake: code={}, description={}", response.errorCode(), response.description());
+            throw new AppException("Error occurred: %s".formatted(objectMapper.writeValueAsString(response)));
+        } else {
+            log.info("Got success response: id={}, message={}", response.message().messageId(), response.message());
+            var jsonNode = objectMapper.valueToTree(response);
+
+            return Response.of(response.message().messageId(), jsonNode);
+        }
+    }
+
+    @SneakyThrows
+    public Integer sendFilesWithMessage(@NonNull String chatId, @NonNull String messageText, @NonNull String contentType,
+                                        @NonNull File... documents) {
         if (documents.length == 0) {
             throw new IllegalArgumentException("No files were provided, please use another method");
         }
@@ -96,7 +138,7 @@ public class TelegramClient implements AutoCloseable {
         }
 
         var docs = IntStream.range(0, documents.length)
-                .filter(i -> i <= documents[i].length())
+                .filter(i -> i <= documents.length)
                 .mapToObj(i -> {
                     var document = documents[i];
                     var mediaDocument = new InputMediaDocument(document);
@@ -111,8 +153,7 @@ public class TelegramClient implements AutoCloseable {
                 })
                 .toArray(InputMedia[]::new);
 
-        var request = new SendMediaGroup(chatId, docs)
-                .allowSendingWithoutReply(false);
+        var request = new SendMediaGroup(chatId, docs);
 
         MessagesResponse response = null;
         try {
@@ -172,8 +213,7 @@ public class TelegramClient implements AutoCloseable {
         }
 
         try {
-            SendMediaGroup request = new SendMediaGroup(chatId, media.toArray(InputMediaPhoto[]::new))
-                    .allowSendingWithoutReply(false);
+            SendMediaGroup request = new SendMediaGroup(chatId, media.toArray(InputMediaPhoto[]::new));
 
             var response = bot.execute(request);
 
@@ -265,12 +305,147 @@ public class TelegramClient implements AutoCloseable {
 
         public Integer messageId() {
             if (!getMessageIds().isEmpty()) {
-                return getMessageIds().get(getMessageIds().size() - 1);
+                return getMessageIds().getLast();
             }
 
             return -1;
         }
 
+    }
+
+    public record AudioRecord(String filename, String title, byte[] content, Integer duration) {}
+
+    @Value
+    @Builder
+    @RequiredArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class AudioSender {
+
+        private static final long MAX_REQUEST_SIZE_BYTES = 49 * 1024 * 1024;
+        private static final int MAX_FILES_PER_GROUP = 10;
+
+        String chatId;
+        String messageText;
+        String contentType;
+        String performer;
+        List<AudioRecord> audioRecords;
+        byte[] thumbnail;
+        ObjectMapper objectMapper;
+        TelegramBot bot;
+
+        List<List<AudioRecord>> audioChunks = new ArrayList<>();
+        AtomicInteger replyMessageId = new AtomicInteger();
+        AtomicReference<MessagesResponse> firstSuccessfulResponse = new AtomicReference<>();
+
+        public static AudioSender create(Function<AudioSender.AudioSenderBuilder, AudioSender.AudioSenderBuilder> creator) {
+            return creator.apply(builder()).build() ;
+        }
+
+        public AudioSender validate() {
+            if (audioRecords.isEmpty()) {
+                throw new IllegalArgumentException("No files were provided, please use another method");
+            }
+            return this;
+        }
+
+        public AudioSender splitToChunks() {
+            var currentChunk = new ArrayList<AudioRecord>();
+            long currentChunkSizeBytes = 0;
+
+            for (var audioRecord : audioRecords) {
+                long fileSize = audioRecord.content().length;
+
+                if (!currentChunk.isEmpty() &&
+                        (currentChunk.size() >= MAX_FILES_PER_GROUP || currentChunkSizeBytes + fileSize > MAX_REQUEST_SIZE_BYTES)) {
+                    audioChunks.add(currentChunk);
+                    currentChunk = new ArrayList<>();
+                    currentChunkSizeBytes = 0;
+                }
+
+                currentChunk.add(audioRecord);
+                currentChunkSizeBytes += fileSize;
+            }
+
+            audioChunks.add(currentChunk);
+            return this;
+        }
+
+        public AudioSender processChunks() {
+            for (int i = 0; i < audioChunks.size(); i++) {
+                var chunk = audioChunks.get(i);
+                boolean isFirstChunk = (i == 0);
+
+                var sendRequest = buildRequest(chunk, isFirstChunk, i);
+                var response = executeRequestSafely(sendRequest, i);
+
+                if (isFirstChunk) {
+                    firstSuccessfulResponse.set(response);
+                    replyMessageId.set(extractReplyMessageId(response));
+                }
+
+                log.info("Successfully sent media group chunk {}/{}.", i + 1, audioChunks.size());
+            }
+            return this;
+        }
+
+        public Response result() {
+            int messageId = firstSuccessfulResponse.get().messages()[0].messageId();
+            var jsonNode = objectMapper.valueToTree(firstSuccessfulResponse);
+            log.info("All file chunks sent successfully. The primary message ID is {}.", messageId);
+            return Response.of(messageId, jsonNode);
+        }
+
+        private SendMediaGroup buildRequest(List<AudioRecord> chunk, boolean isFirstChunk, int index) {
+            var mediaDocuments = chunk.stream()
+                    .map(audioRecord -> new InputMediaAudio(audioRecord.content())
+                            .fileName(audioRecord.filename())
+                            .contentType(contentType)
+                            .performer(performer)
+                            .title(audioRecord.title())
+                            .duration(audioRecord.duration())
+                            .thumbnail(TelegramThumbnailer.toThumbnail(thumbnail)))
+                    .toArray(InputMedia[]::new);
+
+            if (mediaDocuments.length > 0) {
+                String caption;
+                if(isFirstChunk) {
+                    caption = messageText;
+                } else {
+                    caption = "%s/%s".formatted(index, audioChunks.size() - 1);
+                }
+
+                ((InputMediaAudio) mediaDocuments[mediaDocuments.length - 1])
+                        .caption(caption).parseMode(ParseMode.HTML);
+            }
+
+            var request = new SendMediaGroup(chatId, mediaDocuments);
+
+            if (replyMessageId.get() > -1) {
+                request.replyParameters(new ReplyParameters(replyMessageId.get(), chatId))
+                        .disableNotification(true);
+            }
+
+            return request;
+        }
+
+        @SneakyThrows
+        private MessagesResponse executeRequestSafely(SendMediaGroup request, int chunkIndex) {
+            var response = bot.execute(request);
+
+            if (!response.isOk()) {
+                log.error("Failed to send media group chunk {}: code={}, description={}",
+                        chunkIndex + 1, response.errorCode(), response.description());
+                throw new AppException("Error occurred during chunked send: %s"
+                        .formatted(objectMapper.writeValueAsString(response)));
+            }
+
+            return response;
+        }
+
+        private int extractReplyMessageId(MessagesResponse response) {
+            return (response.messages() != null && response.messages().length > 0)
+                    ? response.messages()[0].messageId()
+                    : -1;
+        }
     }
 
 }
